--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "npm": ">=5.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/style-resources": "^1.0.0",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.10.2",
+    "nuxt-fontawesome": "^0.4.0",
     "nuxt-i18n": "^6.3.0",
     "nuxt-webfontloader": "^1.1.0",
     "vue-lazyload": "^1.3.3"
